--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     <title>Hello</title>
   </head>
   <body>
-    <h1>Hello from the main page</h1>
+    <a href="{{ url_for('get_todo') }}"><button class="">All ToDo</button> </a>
+    <a href="{{ url_for('add') }}"><button class="">New Todo</button> </a>
   </body>
 </html>
