--- a/templates/add.html
+++ b/templates/add.html
@@ -11,43 +11,19 @@
   <body>
     <form action="{{ url_for('add') }}" method="POST">
       {{ form.hidden_tag() }}
+      <!-- CSRF protection -->
+
       <p>
-        <label >{{ form.name.label }}</label> 
-        {{ form.name(size=100, class="form-input") }}
-        {% if form.name.errors %}
-            <ul class="errors">
-                {% for error in form.name.errors %}
-                    <li style="color: red;">{{ error }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    </p>
-    
-    <!-- <p>
-        <label >{{ form.details.label }}</label> 
-        {{ form.details(size=100, class="form-input") }}
-        {% if form.details.errors %}
-            <ul class="errors">
-                {% for error in form.details.errors %}
-                    <li style="color: red;">{{ error }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    </p>
-         -->
-    <p>
-      <label>{{ form.progress.label }}</label> 
-      {{ form.progress(class="form-select") }}
-      {% if form.progress.errors %}
-          <ul class="errors">
-              {% for error in form.progress.errors %}
-                  <li style="color: red;">{{ error }}</li>
-              {% endfor %}
-          </ul>
-      {% endif %}
-   </p>
-    
-    <a href="{{ url_for('add') }}"><button class="add_book_button "> Go do it! </button></a>
+        <label>{{ form.name.label }}</label>
+        {{ form.name(class="form-input") }}
+      </p>
+
+      <p>
+        <label>{{ form.progress.label }}</label>
+        {{ form.progress(class="form-select") }}
+      </p>
+
+      <button type="submit">Go do it!</button>
     </form>
   </body>
 </html>
