--- a/templates/alltodoes.html
+++ b/templates/alltodoes.html
@@ -30,7 +30,7 @@
             method="POST"
           >
             <input type="hidden" name="action" value="delete" />
-            <button type="submit">Delete</button>
+            <button class="delete_todo" type="submit">Delete</button>
           </form>
         </div>
       </div>
